chore(sonar): fix sonar with java > 17